Fix spacing issue

--- a/_sass/layout/_ecosystem.scss
+++ b/_sass/layout/_ecosystem.scss
@@ -27,7 +27,7 @@
     margin-bottom: 0;
     letter-spacing: 0.05rem;
     text-transform: inherit;
-    width: 440px;
+    width: 400px;
     margin-left: auto;
     @media screen and(max-width: 769px) {
       width: 50%;
@@ -46,7 +46,7 @@
       display: inline-flex !important;
       justify-content: flex-end;
       align-items: center;
-      max-width: 290px;
+      max-width: 330px;
       margin: 0 auto 0 0;
       @media screen and(max-width: 769px) {
         width: 50%;
